# quiver

./: .gitignore  AGENTS.md  IDEAS.md  LICENSE  README.md  benchmark.json  pyproject.toml
docs/: index.md
specs/: feature-add-upsert.md  feature-delete.md  feature-directory-tree.md  feature-embedding.md  feature-list.md  feature-pack-directory.md  feature-pack-single-file.md  feature-stream.md  feature-unpack.md
src/mdbox/: __init__.py  archive.py  cli.py  logging.py
src/mdbox/utils/: __init__.py
src/quiver/: __init__.py  archive.py  cli.py  logging.py
src/quiver/utils/: __init__.py
tests/: __init__.py  conftest.py  test_add_cli.py  test_archive.py  test_archive_benchmark.py  test_cli.py  test_create_cli.py  test_delete_cli.py  test_embedding.py  test_extract_cli.py  test_pack_cli.py  test_utils.py
