[project]
name = "mdbox"
version = "0.1.0"
description = "Pack and unpack text files into machine-readable XML"
readme = "README.md"
requires-python = ">=3.12.3"
license = {file = "LICENSE"}
authors = [
    {name = "Christian Gröling", email = "contact@christiangroeling.de"}
]
keywords = ["xml", "text", "pack", "unpack", "cli", "format", "serialization", "cross-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "aiofile>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/chgroeling/mdbox"
Repository = "https://github.com/chgroeling/mdbox"
Issues = "https://github.com/chgroeling/mdbox/issues"
Documentation = "https://github.com/chgroeling/mdbox/tree/main/docs"

[project.scripts]
mdbox = "mdbox.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "lxml>=5.0.0",
    "lxml-stubs>=0.5.0",
    "types-click>=7.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mdbox"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--verbose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdbox"]
